alignment fix

--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -270,7 +270,7 @@
 }
 
 #header .hright nav ul li {
-    margin: 10px;
+    margin: 15px;
 }
 
 #header .hright nav ul li a {
